5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_2731.log
== SUBMITION (2019-04-11 11:58:43) 
-- CODE:
a = float(input("coeficiente a"))
b = float(input("coeficiente b"))
r = float(input("raio"))

if(b >= 0 )
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.227315
-- ERROR:
  File "/home/codebench/codes/1638/2731/main.py", line 5
    if(b >= 0 )
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:58:44) 
-- CODE:
a = float(input("coeficiente a"))
b = float(input("coeficiente b"))
r = float(input("raio"))

if(b >= 0 )
	print("Superiores")
else:
	print("Inferiores")
-- ERROR:
File "XXXX", line 5
    if(b >= 0 )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:58:51) 
-- CODE:
a = float(input("coeficiente a"))
b = float(input("coeficiente b"))
r = float(input("raio"))

if(b >= 0 ):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.221812
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
